Fixed scrollbar bug

--- a/resources/assets/sass/partials/_documentation.scss
+++ b/resources/assets/sass/partials/_documentation.scss
@@ -98,6 +98,10 @@
   position: fixed;
   overflow-y: scroll;
 
+.side-menu {
+  overflow: hidden;
+}
+
   li {
     list-style: none;
   }
